tests/NormalTests/paczka1/fuzzy1/70520119.err
Error in line 9: EAo5N0J00 S335 16,4
Error in line 11: V8sDnzdDN A969 73,6
Error in line 13: ojmRX A969 58,6
Error in line 30: V8sDnzdDN A499 49,1
Error in line 34: DxENcZX A499 65,5
